--- a/Table Structure.html
+++ b/Table Structure.html
@@ -45,7 +45,7 @@
 				<td>Fried Chicken</td>
 				<td>Pork Sisig</td>
 				<td>Pancit Palabok</td>
-				<td>Pares<td>
+				<td>Pares</td>
 			</tr>
 		<tr>
 				<td>Lomi</td>
